# StaticNFrame

./: .gitignore  .travis.yml  .travis_converity.yml  .travis_sonarcloud.yml  C++动态加载文档.pptx  CMakeLists.txt  README.md  build.sh  buildAll.sh  buildAll_release.sh  build_dep.sh  build_dynamic_debug.sh  build_release.sh  centos7_instal.sh  cmake.sh  github_token.txt  id_rsa.enc  install.sh  pom.xml  runAll.sh  runAll_release.sh  sonar-project.properties  sonar-project_cloud.properties  新建文本文档.txt
Server/Dependencies/LuaBind/: CMakeLists.txt  HLBind.vcxproj  HLBind.vcxproj.filters  lua_openlibs.cpp  lua_openlibs.h
Server/Dependencies/LuaBind/lua/: linit.c  lualib.h
Server/Dependencies/LuaBind/lua5.3/: linit.c  lualib.h
Server/Dependencies/LuaBind/lua_socket/: unixtcp.c  wsocket.c  wsocket.h
Server/Dependencies/LuaBind/luasocket/: buffer.h  luasocket.c  luasocketio.c  socket.h  unix.c  unix.h  unixtcp.h  usocket.c  usocket.h  wsocket.c  wsocket.h
Server/Dependencies/LuaBind/luasql/: ls_mysql.c
Server/Dependencies/LuaBind/pbc/: context.cpp  map.cpp  pattern.cpp  pbc-lua53.cpp  varint.cpp  wmessage.cpp
Server/Dependencies/LuaBind/protoc-gen-lua/: pb.c  pb.h
Server/Dependencies/mysqlpp/: CMakeLists.txt
Server/Dependencies/mysqlpp/lib/: datetime.cpp
Server/Dependencies/mysqlpp/vc2015/: mysql++_mysqlpp.vcxproj
Server/NFServer/: CMakeLists.txt
Server/NFServer/NFBattleServer/NFBattleClientModule/: NFBattleClientModule.vcxproj  NFBattleClientModule.vcxproj.filters  NFBattleClientPlugin.cpp  NFBattleClientPlugin.h  NFBattleClient_MatchModule.cpp  NFBattleClient_MatchModule.h
Server/NFServer/NFBattleServer/NFBattleServerPlugin/: NFBattleServerModule.cpp  NFBattleServerModule.h  NFBattleServerPlugin.cpp  NFBattleServerPlugin.h  NFBattleServerPlugin.vcxproj  NFBattleServerPlugin.vcxproj.filters
Server/NFServer/NFGameServer/NFGameClientPlugin/: CMakeLists.txt  NFGameClientPlugin.cpp  NFGameClientPlugin.h  NFGameClientPlugin.vcxproj  NFGameClientPlugin.vcxproj.filters  NFGameClient_MasterModule.cpp  NFGameClient_MasterModule.h  NFGameClient_MatchModule.cpp  NFGameClient_MatchModule.h  NFGameClient_ProxyModule.cpp  NFGameClient_ProxyModule.h  NFGameClient_WorldModule.cpp  NFGameClient_WorldModule.h
Server/NFServer/NFGameServer/NFGameLogicPlugin/: NFGameLogicPlugin.vcxproj  NFGameLogicPlugin.vcxproj.filters
Server/NFServer/NFGameServer/NFGameServerPlugin/: CMakeLists.txt  NFGameServerModule.cpp  NFGameServerModule.h  NFGameServerPlugin.cpp  NFGameServerPlugin.h  NFGameServerPlugin.vcxproj  NFGameServerPlugin.vcxproj.filters
Server/NFServer/NFLocationServer/NFLocationClientPlugin/: CMakeLists.txt  NFLocationClientPlugin.cpp  NFLocationClientPlugin.h  NFLocationClientPlugin.vcxproj  NFLocationClient_MasterModule.cpp  NFLocationClient_MasterModule.h
Server/NFServer/NFLocationServer/NFLocationServerPlugin/: CMakeLists.txt  NFLocationServerModule.cpp  NFLocationServerModule.h  NFLocationServerPlugin.cpp  NFLocationServerPlugin.h  NFLocationServerPlugin.vcxproj
Server/NFServer/NFLogServer/NFLogClientPlugin/: CMakeLists.txt  NFLogClientPlugin.cpp  NFLogClientPlugin.h  NFLogClientPlugin.vcxproj  NFLogClient_MasterModule.cpp  NFLogClient_MasterModule.h
Server/NFServer/NFLogServer/NFLogServerPlugin/: CMakeLists.txt  NFLogServerModule.cpp  NFLogServerModule.h  NFLogServerPlugin.cpp  NFLogServerPlugin.h  NFLogServerPlugin.vcxproj
Server/NFServer/NFLoginServer/NFLoginClientPlugin/: CMakeLists.txt  NFLoginClientPlugin.cpp  NFLoginClientPlugin.h  NFLoginClientPlugin.vcxproj  NFLoginClientPlugin.vcxproj.filters  NFLoginClient_MasterModule.cpp  NFLoginClient_MasterModule.h
Server/NFServer/NFLoginServer/NFLoginServerPlugin/: CMakeLists.txt  NFHttpLoginServerModule.cpp  NFHttpLoginServerModule.h  NFLoginServerModule.cpp  NFLoginServerModule.h  NFLoginServerPlugin.cpp  NFLoginServerPlugin.h  NFLoginServerPlugin.vcxproj  (+1 more)
Server/NFServer/NFServerCommon/: CMakeLists.txt  NFIBattleClient_MatchModule.h  NFIBattleServerModule.h  NFICommonClient_MasterModule.h  NFIGameClient_MasterModule.h  NFIGameClient_MatchModule.h  NFIGameClient_ProxyModule.h  NFIGameClient_WorldModule.h  NFIGameServerModule.h  NFIHttpLoginServerModule.h  NFILocationClient_MasterModule.h  NFILocationServerModule.h  NFILogClient_MasterModule.h  NFILogServerModule.h  NFILoginClient_MasterModule.h  NFILoginServerModule.h  NFIMasterServerModule.h  NFIProxyClientModule.h  NFIProxyClient_GameModule.h  NFIProxyClient_LoginModule.h  NFIProxyClient_MasterModule.h  NFIProxyClient_WorldModule.h  NFIProxyServerModule.h  NFIServerNetEvent.h  NFIWebClient_MasterModule.h  NFIWebServerModule.h  NFIWorldClient_MasterModule.h  NFIWorldClient_ProxyModule.h  NFIWorldServerModule.h  NFServerCommon.cpp  NFServerCommon.h  NFServerCommon.vcxproj  NFServerCommon.vcxproj.filters
Server/NFServerLogic/: CMakeLists.txt
Server/NFServerLogic/NFServerLogicCommon/: CMakeLists.txt  NFBehaviorLogMgr.cpp  NFBehaviorLogMgr.h  NFHumanDefine.h  NFIBehaviorLogModule.h  NFIDynamicModule.h  NFIGameConfigModule.h  NFIGameDynamicModule.h  NFIGameLogicModule.h  NFIHumanControllerModule.h  NFIHumanModule.h  NFIHumanServicesModule.h  NFILhdControllerModule.h  NFILoginLogicModule.h  NFIPlayerControllerModule.h  NFIPlayerModule.h  NFIPlayerServicesModule.h  NFIProxyLogicModule.h  NFIWorldLogicModule.h  NFLhdDefine.h  NFPacketHuman.h  NFPlayerDefine.h  NFServerLogicCommon.cpp  NFServerLogicCommon.h  NFServerLogicCommon.vcxproj  NFServerLogicCommon.vcxproj.filters
Server/NFServerLogic/NFWorldLogicPlugin/: CMakeLists.txt  NFCWorldLogicModule.cpp  NFCWorldLogicModule.h  NFWorldLogicPlugin.cpp  NFWorldLogicPlugin.h  NFWorldLogicPlugin.vcxproj  NFWorldLogicPlugin.vcxproj.filters
Server/StaticNFrame/NFComm/: CMakeLists.txt
Server/StaticNFrame/NFPluginLoader/: CMakeLists.txt  NFCLoadStaticPlugin.cpp  NFCPluginManager.cpp  NFCPluginManager.h  NFCrashHandlerMgr.cpp  NFCrashHandlerMgr.h  NFPluginLoader.cpp  NFPluginLoader.vcxproj  NFPluginLoader.vcxproj.filters  NFPluginLoader_Static.vcxproj  NFPrintfLogo.cpp  NFPrintfLogo.h  NFProcessParameter.h  dllmain.cpp
(+3725 files in other folders)
