CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(NFActorPlugin)
ADD_SUBDIRECTORY("NFActorPlugin")

PROJECT(NFCore)
ADD_SUBDIRECTORY("NFCore")

PROJECT(NFKernelPlugin)
ADD_SUBDIRECTORY("NFKernelPlugin")

PROJECT(NFMath)
ADD_SUBDIRECTORY("NFMath")

PROJECT(NFMessageDefine)
ADD_SUBDIRECTORY("NFMessageDefine")

PROJECT(NFNetPlugin)
ADD_SUBDIRECTORY("NFNetPlugin")


PROJECT(NFPluginModule)
ADD_SUBDIRECTORY("NFPluginModule")

PROJECT(NFPluginLoader)
ADD_SUBDIRECTORY("NFPluginLoader")


