CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY("NFActorPlugin")
ADD_SUBDIRECTORY("NFCore")
ADD_SUBDIRECTORY("NFKernelPlugin")
ADD_SUBDIRECTORY("NFMath")
ADD_SUBDIRECTORY("NFNetPlugin")
ADD_SUBDIRECTORY("NFPluginModule")
ADD_SUBDIRECTORY("NFMysqlPlugin")
ADD_SUBDIRECTORY("NFMongoPlugin")
ADD_SUBDIRECTORY("NFXPlugin/NFLuaScriptPlugin")
ADD_SUBDIRECTORY("NFSqlitePlugin")
#ADD_SUBDIRECTORY("NFMonitorPlugin")


