CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(NFPluginLoader)

AUX_SOURCE_DIRECTORY(. SRC)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} rt dl protobuf  
	 bson1.0 event_core event_extra event crypto mongoc-1.0 
	mysqlclient ssl Common LuaBind  NFMessageDefine NFCore NFPluginModule NFServerCommon NFServerLogicCommon)

ADD_DEPENDENCIES(${PROJECT_NAME} Common 
NFMessageDefine NFCore NFMath NFPluginModule)

if (CMAKE_BUILD_TYPE STREQUAL "Release")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} 
		PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Product/run/Release"
	)
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} 
		PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Product/run/Debug"
	)
elseif (CMAKE_BUILD_TYPE STREQUAL "DynamicRelease")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} 
		PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Product/run/Dynamic_Release"
	)
elseif(CMAKE_BUILD_TYPE STREQUAL "DynamicDebug")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} 
		PROPERTIES 
		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Product/run/Dynamic_Debug"
	)
endif()




