CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(NFGameLogicPlugin)

AUX_SOURCE_DIRECTORY(. SRC)

if (CMAKE_BUILD_TYPE MATCHES "Release")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/Lib/Release")
else()
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/Lib/Debug")
endif()

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC} )


