CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(NFNetPlugin)

AUX_SOURCE_DIRECTORY(. SRC)
AUX_SOURCE_DIRECTORY(./evpp SRC)
AUX_SOURCE_DIRECTORY(./evpp/http SRC)
AUX_SOURCE_DIRECTORY(./evpp/httpc SRC)
AUX_SOURCE_DIRECTORY(./evpp/udp SRC)

if (CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/Lib/Release")
	ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC} )
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/Lib/Debug")
	ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC} )
elseif (CMAKE_BUILD_TYPE STREQUAL "DynamicRelease")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/run/Dynamic_Release")
	ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SRC} )
elseif(CMAKE_BUILD_TYPE STREQUAL "DynamicDebug")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Product/run/Dynamic_Debug")
	ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SRC} )
endif()

